# ezrassor_sim_description

./: package.xml  setup.py
.github/workflows/: build.yml
config/: controllers.yaml
docs/: README.md
launch/: spawn_ezrassor.py
source/arms_driver/: __main__.py
source/drums_driver/: __main__.py
source/wheels_driver/: __main__.py
urdf/: ezrassor.gazebo  ezrassor.xacro  macros.xacro
